--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a transplant from Hayward California who's spent the last 10 years basking in the San Diego sun</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>In my free time I enjoy watching(and over analyzing) tv shows and comics and playing games with my friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a project manager of a technology focused marketing company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in San Diego</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy problem solving and learning new things!</p>
     </section>
 
     <footer id="footer">
